--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<title>This is the title of the webpage!</title>
-  
-  
-    <!-- this is just a comment for IS445 Fall 2024 BCU/BCG -->
-    <p>This is an example paragraph for Fa2024-ID41523. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>This is the title of the webpage!</title>
+</head>
+<body>
+    <h1>This is an example paragraph for Fa2024-ID41523. Anything in the body tag will appear on the page, just like this p tag and its contents.</h1>
+</body>
+</html>
